small logo alignment fixes

--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@
   }
  
   * {
-    @apply border-border scroll-smooth;
+    @apply border-border scroll-smooth uppercase;
   }
 
   body {
